edgedb-composable-query/src/composable/snapshots/edgedb_composable_query__composable__test__query_tests-4.snap
---
source: edgedb-composable-query/src/composable/mod.rs
assertion_line: 274
expression: "OneInnerBySelector::query()"
---
with
	_selector := (select Inner limit 1),
select (_selector) {
	req := (.req),
	opt := (.opt),
}
