edgedb-composable-query/src/composable/snapshots/edgedb_composable_query__composable__test__query_tests-5.snap
---
source: edgedb-composable-query/src/composable/mod.rs
assertion_line: 275
expression: "ManyInnersBySelector::query()"
---
with
	_selector := (select Inner limit 10),
select (_selector) {
	req := (.req),
	opt := (.opt),
}
