edgedb-composable-query/src/composable/snapshots/edgedb_composable_query__composable__test__sync_tests-2.snap
---
source: edgedb-composable-query/src/composable/mod.rs
assertion_line: 163
expression: buf
---
	inner: {
		req,
		opt
	},
	some_field,
	other_field
