edgedb-composable-query/src/composable/snapshots/edgedb_composable_query__composable__test__sync_tests-3.snap
---
source: edgedb-composable-query/src/composable/mod.rs
assertion_line: 167
expression: buf
---
	inner: {
		id,
		req,
		opt
	},
	some_field,
	other_field
