edgedb-composable-query/src/composable/snapshots/edgedb_composable_query__composable__test__sync_tests.snap
---
source: edgedb-composable-query/src/composable/mod.rs
assertion_line: 159
expression: buf
---
	req,
	opt
